--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "todo-app",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://daphay.github.io/todo-app",
+  "homepage": "https://daphay.github.io/todo-app",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.20.0",
     "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
